# ECN-2-1-Robot

./: .gitignore  README.md
CAD/schematics/: Orientation adapter - 3D printing.stl  Orientation adapter.f3d  Orientation adapter.step  Orientation motor adapter.f3d  Right_angle_bracket.stp  Spin adapter 3D printing.stl  Spin adapter.f3d  Spin adapter.step  corner_cube.stp  sprocket_wheel - P30_ISP_A001_3D.step
Calculations/: Dynamic model calculations.docx  Kinematic model calculations.docx  Kinematic model calculations.odt  Kinematic model proof.ods
Code documentation/html/: ____init_____8py.html  _dynamixel_s_d_k_8h.html  _dynamixel_s_d_k_8h__incl.map  _dynamixel_s_d_k_8h__incl.md5  _dynamixel_s_d_k_8h_source.html  annotated.html  annotated_dup.js  class_robot-members.html  class_robot.html  class_robot.js  class_robot__coll__graph.map  class_robot__coll__graph.md5  classcontroller-members.html  classcontroller.html  classcontroller.js  classcontroller__inherit__graph.map  classcontroller__inherit__graph.md5  classdynamixel_1_1_group_bulk_read-members.html  classdynamixel_1_1_group_bulk_read.html  classdynamixel_1_1_group_bulk_read.js  classdynamixel_1_1_group_bulk_write-members.html  classdynamixel_1_1_group_bulk_write.html  classdynamixel_1_1_group_bulk_write.js  classdynamixel_1_1_group_sync_read-members.html  classdynamixel_1_1_group_sync_read.html  classdynamixel_1_1_group_sync_read.js  classdynamixel_1_1_group_sync_write-members.html  classdynamixel_1_1_group_sync_write.html  classdynamixel_1_1_group_sync_write.js  classdynamixel_1_1_packet_handler-members.html  classdynamixel_1_1_packet_handler.html  classdynamixel_1_1_packet_handler.js  classdynamixel_1_1_packet_handler__inherit__graph.map  classdynamixel_1_1_packet_handler__inherit__graph.md5  classdynamixel_1_1_port_handler-members.html  classdynamixel_1_1_port_handler.html  classdynamixel_1_1_port_handler.js  classdynamixel_1_1_port_handler__inherit__graph.map  classdynamixel_1_1_port_handler__inherit__graph.md5  classdynamixel_1_1_port_handler_arduino-members.html  (+289 more)
Code documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+58 more)
Code documentation/latex/: ____init_____8py.tex  _dynamixel_s_d_k_8h.tex  _dynamixel_s_d_k_8h__incl.md5  annotated.tex  class_robot.tex  class_robot__coll__graph.md5  classcontroller.tex  classcontroller__coll__graph.md5  classreal__world.tex  classreal__world__inherit__graph.md5  classrobot__state.tex  classrobot__state__inherit__graph.md5  classsim.tex  classsim__inherit__graph.md5  classslider__publisher_1_1publisher_node.tex  classslider__publisher_1_1publisher_node__coll__graph.md5  classwidget_1_1_ui___form.tex  classwidget_1_1_ui___form__inherit__graph.md5  control__input_2_c_make_lists_8txt.tex  controller_8cpp.tex  controller_8cpp__incl.md5  dir_0c77560b8ec6f4a87c8d913e193e13fc.tex  dir_53339db3b22a502c95613138a90f45c2.tex  dir_53339db3b22a502c95613138a90f45c2_dep.md5  dir_6e2f84531e1adf113d96320eb1570ac3.tex  dir_808867b869cf54ffb3ceccf13dddf72b.tex  dir_83bc2e02b8220cd9fb77de0ae39b1fea.tex  dir_942cb13a2dcfd2df4d6dda6f608693bf.tex  dir_b75527584e7909115d8152a20197f6fd.tex  dir_b75527584e7909115d8152a20197f6fd_dep.md5  dir_bb274db01b1203997daf363bac2aa362.tex  dir_c66ccc8d381f529930f342e9487bc7cb.tex  dir_c66ccc8d381f529930f342e9487bc7cb_dep.md5  dir_e2fa8380f5554bf5df657eeb9246f615.tex  dir_ea9570e09e24535db140c018f74d19f8.tex  dir_ea9570e09e24535db140c018f74d19f8_dep.md5  dir_f021bba31aa63c3d3018322a12ab4c62.tex  dir_f3637caef8859ec229f93b03d973ed3f.tex  files.tex  gui_8launch_8py.tex  (+38 more)
OpenCR/usb_to_dxl/: usb_to_dxl.ino
Screenshots/: Manual_speed_mode-simulation
Status reports/: .~lock.Status report 0.odt#  .~lock.Status report 1.odt#  Que queremos hacer.docx  Status report 0.odt  Status report 2.odt  Status report 3.odt  ~$e queremos hacer.docx
ros/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros/install/: .rosinstall  local_setup.sh  setup.sh
ros/src/: testfile.txt
ros2/PlotJuggler plots/: Real_world-controller-air.xml  Simulation-controller.xml
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/log/: latest_build
ros2/src/: global_params.yaml
ros2/src/control_input/: CMakeLists.txt  package.xml
ros2/src/control_input/msg/: ControlInput.msg  PositionCommand.msg  SliderCommand.msg  StateVector.msg
ros2/src/mobile_robot/: CMakeLists.txt  package.xml
ros2/src/mobile_robot/config/: robot_sim.rviz
ros2/src/mobile_robot/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_old.xacro  ros2_control.xacro
ros2/src/mobile_robot/launch/: display.launch.py  real_world.launch.py  robot_state.launch.py  robot_state.py  simulation.launch.py
ros2/src/mobile_robot/scripts/: gui.py  slider_publisher.py  widget.py
ros2/src/mobile_robot/src/: controller.cpp  motor_state.cpp  real_world.cpp  robot_state.cpp  sim.cpp  transform_broadcaster.cpp
ros2/src/robot_library/: CMakeLists.txt  package.xml
ros2/src/robot_library/include/robot_library/: robot.h
ros2/src/robot_library/msg/: ControlInput.msg  MotorCommand.msg
ros2/src/robot_library/src/: robot.cpp
ros2/src/robot_library/srv/: ResetRobot.srv
ros2/src/workstation/: CMakeLists.txt  package.xml
ros2/src/workstation/config/: robot_core.urdf  robot_sim.rviz
ros2/src/workstation/description/: model.urdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
ros2/src/workstation/include/: robot.h
ros2/src/workstation/launch/: gui.launch.py  real_world.launch.py  simulation.launch.py
ros2/src/workstation/scripts/: gui.py  slider_publisher.py  widget.py
ros2/src/workstation/src/: MobileRobot.cpp  controller.cpp  real_world.cpp  robot.cpp  sim.cpp
(+307 files in other folders)
