<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_library</name>
  <version>1.0.0</version>
  <description>This package contains the Robot class, which is used by mobile_robot and workstation</description>
  <maintainer email="kevingaitan0798@gmail.com">Kevin Gaitan</maintainer>
  <maintainer email="netorincon2@hotmail.com">Ernesto Rincon Marquez</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>control_input</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
